kubernetes/apps/network/external-service/truenas/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: truenas
  namespace: network
spec:
  hostnames:
    - "scale.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: truenas
