kubernetes/apps/network/external-service/truenas/ingress.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-truenas
subsets:
  - addresses:
      - ip: ${TRUENAS_IP}
    ports:
      - port: 444
        name: https
---
apiVersion: v1
kind: Service
metadata:
  name: external-truenas
spec:
  ports:
    - port: 80
      targetPort: 444
      name: https
  clusterIP: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-service-ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    nginx.ingress.kubernetes.io/auth-method: GET
    nginx.ingress.kubernetes.io/auth-url: "https://auth.${SECRET_DOMAIN}/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/?rm=$request_method"
    nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
    nginx.ingress.kubernetes.io/auth-snippet: proxy_set_header X-Forwarded-Method $request_method;
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: external
  rules:
  - host: scale.${SECRET_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-truenas
            port:
              number: 80
